Clean and update a lot of things. Remove usage of deprecated APIs.
Signed-off-by: Pierre Adam <p.adam@merim-groupe.com>